[cli] Add ability to launch/sign in to web from CLI
